data binding and text fix

--- a/demo/editor.html
+++ b/demo/editor.html
@@ -34,7 +34,7 @@
           <div class="layout horizontal">
             <poly-me-editor data="{{data}}" class="flex"></poly-me-editor>
             <div class="border"></div>
-            <poly-me-render data="{{data}}" class="flex"></poly-me-render>
+            <poly-me-render data="[[data]]" class="flex"></poly-me-render>
           </div>
         </template>
       </demo-snippet>
