--- a/poly-me-editor.html
+++ b/poly-me-editor.html
@@ -93,7 +93,7 @@ Usage Example:
             <!--Change order-->
             <paper-button raised data-index$="[[tabNumb]]" data-dir="0" on-tap="_move">Move Left</paper-button>
             <paper-button raised data-index$="[[tabNumb]]" data-dir="1" on-tap="_move">Move Right</paper-button>
-            <paper-button raised data-index$="[[tabNumb]]" on-tap="_del">Delete Section</paper-button>
+            <paper-button raised data-index$="[[tabNumb]]" on-tap="_del">Delete Tab</paper-button>
             <poly-me-section-editor data="{{section}}"></poly-me-section-editor>
           </div>
         </template>
